--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,18 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
-            <groupId>pe.chalk</groupId>
+            <groupId>com.github.ChalkPE</groupId>
             <artifactId>TelegramBot</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
